--- a/_scss/partials/_dotNav.scss
+++ b/_scss/partials/_dotNav.scss
@@ -35,7 +35,7 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: rgba(255,255,255,0.25);
+    background: rgba(255,255,255,0.25);
     transition: transform 0.2s, background-color 0.5s;
     transform-origin: 50% 50%;
   }
