--- a/css/main.css
+++ b/css/main.css
@@ -1770,6 +1770,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+::-moz-selection {
+  background: #2762D8; }
+
+::selection {
+  background: #2762D8; }
+
 html,
 body {
   margin: 0;
