--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
   <span class="line bottom"></span>
 </div>
 <div id="overlay" class="overlay">
-  <div class="logo"><img class="logo-img" src="img/logo-white.png" alt=""><span>Brittany Chiang</span></div>
+  <div class="logo"><img class="logo-img" src="img/logo-white.png" alt="logo"><span>Brittany Chiang</span></div>
   <nav class="overlay-menu">
     <ul class="menu-container">
       {% for item in site.data.navigation %}
