--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -8,14 +8,14 @@
         <div class="portfolio-row">
           <div class="screenshots {% if project.title == 'Screentime 2.0' %}screentime{% endif %}">
             {% if project.title == "Screentime 2.0" %}
-            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-1.jpg" alt="">
-            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-2.jpg" alt="">
-            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-3.jpg" alt="">
-            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-4.jpg" alt="">
+            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-1.jpg" alt="screentime-1">
+            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-2.jpg" alt="screentime-2">
+            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-3.jpg" alt="screentime-3">
+            <img class="img-{{project.img}}" src="img/portfolio/{{project.img}}/{{project.img}}-4.jpg" alt="screentime-4">
             {% else %}
-            <img class="img-lg" src="img/portfolio/{{project.img}}/{{project.img}}.jpg" alt="">
-            <img class="img-md" src="img/portfolio/{{project.img}}/{{project.img}}-tablet.jpg" alt="">
-            <img class="img-sm" src="img/portfolio/{{project.img}}/{{project.img}}-mobile.jpg" alt="">
+            <img class="img-lg" src="img/portfolio/{{project.img}}/{{project.img}}.jpg" alt="desktop-screenshot">
+            <img class="img-md" src="img/portfolio/{{project.img}}/{{project.img}}-tablet.jpg" alt="tablet-screenshot">
+            <img class="img-sm" src="img/portfolio/{{project.img}}/{{project.img}}-mobile.jpg" alt="mobile-screenshot">
             {% endif %}
           </div>
           <div class="description-title-container">
