--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -34,7 +34,7 @@
             </h2>
             <ul class="list">
               {% for tool in site.data.skills.tools %}
-              <li class="list-item"><img class="item-svg" src="img/icons/checkmark.svg"/>{{tool.item}}</li>
+              <li class="list-item"><img class="item-svg" src="img/icons/checkmark.svg" alt="checkmark"/>{{tool.item}}</li>
               {% endfor %}
             </ul>
           </div>
@@ -44,7 +44,7 @@
               <span>Knowledge</span></h2>
               <ul class="list">
                 {% for thing in site.data.skills.knowledge %}
-                <li class="list-item"><img class="item-svg" src="img/icons/checkmark.svg"/>{{thing.item}}</li>
+                <li class="list-item"><img class="item-svg" src="img/icons/checkmark.svg" alt="checkmark"/>{{thing.item}}</li>
                 {% endfor %}
               </ul>
             </div>
