--- a/_scss/partials/_mobileMenu.scss
+++ b/_scss/partials/_mobileMenu.scss
@@ -59,36 +59,39 @@
   visibility: hidden;
   overflow: hidden;
   z-index: 10;
-  transition: 0.3s;
-  &.open {
-    height: 100%;
-    z-index: 10;
-    opacity: 1;
-    visibility: visible;
-    overflow: hidden;
-    .menu-item {
-      animation: fadeInTop 0.5s ease forwards;
-      animation-delay: 0.35s;
-      &:nth-of-type(2) {
-        animation-delay: 0.4s;
-      }
-      &:nth-of-type(3) {
-        animation-delay: 0.45s;
-      }
-      &:nth-of-type(4) {
-        animation-delay: 0.5s;
-      }
-      &:nth-of-type(5) {
-        animation-delay: 0.55s;
-      }
-      &:nth-of-type(6) {
-        animation-delay: 0.6s;
-      }
-      &:nth-of-type(7) {
-        animation-delay: 0.65s;
+  transition: all 0.3s ease;
+  @include MQ(M) {
+    &.open {
+      height: 100%;
+      z-index: 10;
+      opacity: 1;
+      visibility: visible;
+      overflow: hidden;
+      .menu-item {
+        animation: fadeInTop 0.5s ease forwards;
+        animation-delay: 0.35s;
+        &:nth-of-type(2) {
+          animation-delay: 0.4s;
+        }
+        &:nth-of-type(3) {
+          animation-delay: 0.45s;
+        }
+        &:nth-of-type(4) {
+          animation-delay: 0.5s;
+        }
+        &:nth-of-type(5) {
+          animation-delay: 0.55s;
+        }
+        &:nth-of-type(6) {
+          animation-delay: 0.6s;
+        }
+        &:nth-of-type(7) {
+          animation-delay: 0.65s;
+        }
       }
     }
   }
+
   .logo {
     color: $white;
     font-family: $Chronicle, $serif-stack;
