--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,11 +6,15 @@
 {% else %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
 <script src="{{site.baseurl}}/js/main.js"></script>
+<script>
+  const contactform = document.getElementById('contactform');
+  contactform.setAttribute('action', 'https:' + '//formspree.io/' + 'brittany.chiang' + '@' + 'gmail' + '.' + 'com');
+</script>
 {% endif %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-45666519-2', 'auto');
