--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -8,7 +8,7 @@
       <div class="center">
         <h1 class="section-heading">Experience</h1>
         <span class="divider center"></span>
-        <p class="experience-description">Thanks to Northeastern's co-op program, I've had the privelege of completing two awesome six-month co-ops as a Creative Technologist at <a href="http://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a> and Software Engineer at <a href="https://starry.com/" target="_blank">Starry</a>. I'm currently on looking for my third and final co-op from July to December 2017.</p>
+        <p class="experience-description">Thanks to Northeastern's co-op program, I've had the privelege of completing two awesome six-month co-ops as a Creative Technologist at <a href="http://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a> and Software Engineer at <a href="https://starry.com/" target="_blank">Starry</a>. I'm currently searching for my third and final co-op from July to December 2017.</p>
       </div>
       <div class="experience-wrapper">
         <div id="timeline">
