--- a/_scss/partials/_404.scss
+++ b/_scss/partials/_404.scss
@@ -101,7 +101,7 @@
         border-radius: 30px;
         transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-        &:hover {
+        &:hover, &:focus {
           background: #c74739;
         }
       }
