--- a/_scss/partials/_mobileMenu.scss
+++ b/_scss/partials/_mobileMenu.scss
@@ -11,7 +11,7 @@
   @include MQ(M) {
     display: block;
   }
-  &:hover {
+  &:hover, &:focus {
     opacity: 0.7;
   }
   &.active {
@@ -155,7 +155,7 @@
           &:after {
             transition: width 0.7s cubic-bezier(0.22, 0.61, 0.36, 1);
           }
-          &:hover {
+          &:hover, &:focus {
             &:before,
             &:after {
               width: 105%;
