--- a/_scss/partials/_blockBtn.scss
+++ b/_scss/partials/_blockBtn.scss
@@ -17,33 +17,33 @@
   &:hover, &:focus {
     background: $blue;
     transition: all 0.3s ease;
-    .resume-text {
+    .text {
       opacity: 0;
       visibility: hidden;
       transform: translate3D(0, 4em, 0) scale(.25);
     }
-    .resume-img {
+    .icon {
       opacity: 1;
       visibility: visible;
       transform: translate3D(0, 0, 0) scale(1);
     }
   }
-  .resume-text,
-  .resume-img {
+  .text,
+  .icon {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     text-align: center;
   }
-  .resume-text {
+  .text {
     margin: 40px auto;
     opacity: 1;
     visibility: visible;
     transition: transform .4s cubic-bezier(.425, -.195, .005, 1.215), opacity .13333s linear, -webkit-transform .4s cubic-bezier(.425, -.195, .005, 1.215);
     transform: scale(1);
   }
-  .resume-img {
+  .icon {
     width: 50px;
     margin: 25px auto;
     opacity: 0;
