--- a/_scss/partials/_services.scss
+++ b/_scss/partials/_services.scss
@@ -57,8 +57,8 @@
       @include MQ(SM) {
         padding: 20px 0;
       }
-      &:nth-of-type(odd) {
-        border-right: 1px solid $whiteRGBA;
+      &:nth-of-type(even) {
+        border-left: 1px solid $whiteRGBA;
         @include MQ(S660) {
           border: none;
         }
