--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,7 +1,7 @@
 <section class="section background">
   <div class="section__title">Background</div>
   <div class="section__content">
-    <p>I'm a fifth year student at <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> in Boston expecting to graduate in May 2018. Thanks to Northeastern's co-op program, I've had the privilege of completing three wonderful six-month co-ops at <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>, <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple</a>.</p>
+    <p>I'm a fifth year student at <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> expecting to graduate in May 2018. Thanks to Northeastern's co-op program, I've had the privilege of completing three wonderful six-month co-ops at <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>, <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple</a>.</p>
 
     <p>As a front-end engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable and efficient under the hood while providing engaging, pixel-perfect user experiences.</p>
 
