--- a/_includes/employment-status.html
+++ b/_includes/employment-status.html
@@ -1,7 +1,7 @@
-<div class="status">
+<a class="status" href="{{site.resume}}" target="_blank">
   <div class="status__light">
     <div class="status__light__ring"></div>
     <div class="status__light__led"></div>
   </div>
   <div class="status__message">Currently seeking full-time opportunities!</div>
-</div>
+</a>
