--- a/_scss/partials/_globals.scss
+++ b/_scss/partials/_globals.scss
@@ -1,21 +1,20 @@
 // Colors
-$night: #131417;
-$black: #36363C;
+$night: #191e27;
+$black: #36363c;
 $dark-grey: #444452;
 $grey: #777777;
-$blue: #007BFF;
+$blue: #007bff;
 $slate: #afafbf;
 $off-white: #e7e7e7;
 $white: #fff;
-$green: #BADA55;
-$purple: #7D0CE8;
-$red: #FF0000;
-$orange: #E8850C;
-$yellow: #FFF10D;
+$green: #bae67e;
+$purple: #7d0ce8;
+$red: #ff0000;
+$orange: #e8850c;
+$yellow: #ffcc66;
 
 // Fonts
-$Apercu: 'Apercu';
-$sans-serif-stack: Source Sans Pro, Helvetica, Arial, sans-serif;
+$Apercu: 'Apercu', 'Source Sans Pro', Helvetica, Arial, sans-serif;
 
 // Media queries
 $fifteen-inch: 1440px;
