--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,21 +2,24 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      Currently, I'm an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> working on web projects for our awesome clients. Prior to Upstatement, I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> with my bachelor's degree after completing three wonderful six-month co-ops at
+      I'm currently an Engineer at
+      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
+      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
       <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
       <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
       <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
     </p>
 
-    <p>As a front-end engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
+    <p>
+      As a software engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
       with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.</p>
+      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+    </p>
 
     <p>
       <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.</p>
+      or crossing off another item on my bucket list.
+    </p>
 
     <!-- {% include employment-status.html %} -->
   </div>
